--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Ethan mueller</title>
+  <title>JAY THE GAY</title>
   <body>
     <h1>imagine</h1>
     <p>lol</p>
