--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <title>meeps site</title>
   <body>
-    <h1>imagine</h1>
-    <p>lol</p>
+    <h1>Welcome. This is my website.</h1>
+    <p>I am still learning how to code, from where, its w3schools, I will update this site time to time.</p>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3048WLK5I1KBDoWyPf1Vts?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </body>
 </html>
