Update index.html for now lool

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <div style='width:640px;height:480px;max-width:100%'>
     <div id='game'></div>
 </div>
+    <audio controls autoplay muted loop>
+      <source src="
+      
+    </audio>
 
   </body>
 </html>
