--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <div style='width:640px;height:480px;max-width:100%'>
     <div id='game'></div>
 </div>
-    <audio controls autoplay muted loop>
-      <source src="Lovely – Alex-Productions (No Copyright Music).mp3">
-    </audio>
+    <audio autoplay loop src="Lovely – Alex-Productions (No Copyright Music).mp3">
 
   </body>
 </html>
