--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
     <h1 style="background-color:Aquamarine;">Welcome. This is my website.</h1>
     <p>I am still learning how to code, from where, its w3schools, I will update this site time to time.</p>
-    <audio autoplay loop src="Lovely – Alex-Productions (No Copyright Music).mp3">
+    <audio controls autoplay loop src="Lovely – Alex-Productions (No Copyright Music).mp3">
 
   </body>
 </html>
